--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   },
   "browserify": {
     "transform": [
-      "hbsfy"
+      [
+        "hbsfy", {
+          "traverse": true
+        }
+      ]
     ]
   },
   "engines": {
@@ -30,6 +34,7 @@
   },
   "dependencies": {
     "accept-language-parser": "^1.0.2",
+    "algoliasearch": "^3.10.2",
     "async": "^1.5.0",
     "blankie": "^1.1.0",
     "bluebird": "^2.10.2",
